<resources>
    <string name="app_name">DeAcero</string>
    <string name="Logo">Logo</string>
    <string name="Login">Login</string>

    <string name="title_activity_menu__graficas">Menu_Graficas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="EntrarText">Entrar</string>
    <string name="NombreUsuario">Nombre de Usuario</string>
    <string name="ContraseñaTxt">Contraseña</string>
    <string name="ProduccionMerma">Producción/Merma</string>
    <string name="Dia">Por día</string>
    <string name="Mes">Por mes</string>
    <string name="Producción">Producción</string>
    <string name="Merma">Merma</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Bienvenido">Bienvenid@</string>
    <string name="Nombre">Nombre:</string>
    <string name="Appaterno">A.paterno:</string>
    <string name="Apmaterno">A.materno:</string>
    <string name="Usuario">Usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="Editar">Editar</string>
    <string name="Borrar">Borrar</string>
    <string name="Privilegios">Privilegios</string>
    <string name="Anadir">Añadir</string>
    <string name="Entrada">Entrada Principal</string>
    <string name="Principal">Salida Principal</string>
    <string name="Mas2Heavy">+2 NON-FE HEAVY</string>
    <string name="NoFerrosaLight">NON-FE HI-GRADE LIGHT</string>
    <string name="FerrosaTramp">FERROUS TRAMP</string>
    <string name="Menos2Heavy">_2 NON-FE HEAVY</string>
    <string name="Heavy4">_4 NON-FE HEAVY</string>
    <string name="Heavy_3_4">3/4 NON-FE HEAVY</string>
    <string name="TrituradoraImg">Trituradora</string>
</resources>
